# resume-inbox-assistant

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
src/mail_fetcher/: CMakeLists.txt  mail_fetcher.cpp  mail_fetcher.h
src/mail_parser/: CMakeLists.txt  mail_parser.cpp  mail_parser.h
